<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Quiz App"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/question_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="50dp"

            android:layout_marginTop="25dp"
            android:hint="@string/question_area">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/true_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/true_button" />

            <Button
                android:id="@+id/false_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/false_button" />

        </LinearLayout>
        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/next_button" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>